# websearch-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  README.md  auth.py  config.py  logger.py  loguru_config.py  mcp_client_websearch.py  pyproject.toml  server.py
.junie/: guidelines.md
tests/: test_demo_sample.py  test_project_metadata.py  test_temp_unittest_demo.py
