[project]
name = "websearch-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.19.0",
    "python-decouple>=3.8",
    "rich>=14.2.0",
    "sse-starlette>=3.0.2",
    "tavily-python>=0.7.12",
    "uvicorn[standard]>=0.38.0",
]
